--- a/applepips-light.css
+++ b/applepips-light.css
@@ -1,10 +1,10 @@
 /*
-
-    Name:       Apple Pips (light)
-    Author:     Jan T. Sott
+    Name:     Apple Pips (light)
+    Author:   Jan T. Sott
+    License:  Creative Commons Attribution-ShareAlike 3.0 Unported License
+    URL:      https://github.com/idleberg/ApplePips-highlight.js
 
     Created using Chris Kempson's Base16-Builder (https://github.com/chriskempson/base16-builder)
-
 */
 .applepips-light-comment, pre .comment, pre .title {
   color: #7d8182;
